--- a/Store2/Views/Account/ConfirmEmail.cshtml
+++ b/Store2/Views/Account/ConfirmEmail.cshtml
@@ -1,11 +1,23 @@
 ﻿@{
     ViewBag.Title = "Confirm Email";
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <div>
-        <p>
-            Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-        </p>
+
+<main aria-labelledby="title" class="py-5">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="card shadow">
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <h2 id="title" class="card-title">@ViewBag.Title</h2>
+                            <p class="card-text">
+                                Thank you for confirming your email. You can now access all the features of your account.
+                            </p>
+                            <a href="@Url.Action("Login", "Account")" class="btn btn-primary mt-3">Click here to Log in</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
