--- a/Store2/Views/Account/Login.cshtml
+++ b/Store2/Views/Account/Login.cshtml
@@ -5,59 +5,87 @@
 }
 
 <main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <div class="row">
-        <div class="col-md-8">
-            <section id="loginForm">
-                @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
-                {
-                    @Html.AntiForgeryToken()
-                    <h4>Use a local account to log in.</h4>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="row">
-                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 col-form-label" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 col-form-label" })
-                        <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="offset-md-2 col-md-10">
-                            <div class="checkbox">
-                                @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.LabelFor(m => m.RememberMe)
+    <div class="account-pages mt-5 mb-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6 col-xl-5">
+                    <div class="card">
+                        <div class="card-body p-4">
+                            <div class="text-center w-75 m-auto">
+                                <a href="index.html">
+                                    <span><img src="assets/images/logo-dark.png" alt="" height="22"></span>
+                                </a>
+                                <p class="text-muted mb-4 mt-3">Enter your email address and password to access admin panel.</p>
                             </div>
-                        </div>
+
+                            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <div class="form-group mb-3">
+                                    @Html.LabelFor(m => m.Email)
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group mb-3">
+                                    @Html.LabelFor(m => m.Password)
+                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group mb-3">
+                                    <div class="custom-control custom-checkbox">
+                                        @Html.CheckBoxFor(m => m.RememberMe, new { @class = "custom-control-input", id = "checkbox-signin" })
+                                        <label class="custom-control-label" for="checkbox-signin">Remember me</label>
+                                    </div>
+                                </div>
+                                <div class="form-group mb-0 text-center">
+                                    <button class="btn btn-primary btn-block" type="submit">Log In</button>
+                                </div>
+                            }
+
+                            <div class="text-center">
+                                <h5 class="mt-3 text-muted">Sign in with</h5>
+                                <ul class="social-list list-inline mt-3 mb-0">
+                                    <li class="list-inline-item">
+                                        @using (Html.BeginForm("ExternalLogin", "Account", new { provider = "Facebook", returnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "facebook-login-form" }))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <button type="submit" class="btn btn-social-icon btn-facebook"><i class="mdi mdi-facebook"></i></button>
+                                        }
+                                    </li>
+                                    <li class="list-inline-item">
+                                        @using (Html.BeginForm("ExternalLogin", "Account", new { provider = "Google", returnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "google-login-form" }))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <button type="submit" class="btn btn-social-icon btn-google"><i class="mdi mdi-google"></i></button>
+                                        }
+                                    </li>
+                                    <li class="list-inline-item">
+                                        @using (Html.BeginForm("ExternalLogin", "Account", new { provider = "Twitter", returnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "twitter-login-form" }))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <button type="submit" class="btn btn-social-icon btn-twitter"><i class="mdi mdi-twitter"></i></button>
+                                        }
+                                    </li>
+                                </ul>
+                            </div>
+                        </div> <!-- end card-body -->
                     </div>
-                    <div class="row">
-                        <div class="offset-md-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-outline-dark" />
-                        </div>
+                    <!-- end card -->
+
+                    <div class="row mt-3">
+                        <div class="col-12 text-center">
+                            <p><a href="pages-recoverpw.html" class="text-muted ml-1">Forgot your password?</a></p>
+                            <p class="text-muted">Don't have an account? <a href="@Url.Action("Register", "Account")" class="text-primary font-weight-medium ml-1">Sign Up</a></p>
+                        </div> <!-- end col -->
                     </div>
-                    <p>
-                        @Html.ActionLink("Register as a new user", "Register")
-                    </p>
-                    @* Enable this once you have account confirmation enabled for password reset functionality
-                        <p>
-                            @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                        </p>*@
-                }
-            </section>
+                    <!-- end row -->
+                </div> <!-- end col -->
+            </div>
+            <!-- end row -->
         </div>
-        <div class="col-md-4">
-            <section id="socialLoginForm">
-                @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-            </section>
-        </div>
+        <!-- end container -->
     </div>
+    <!-- end page -->
 </main>
 
 @section Scripts {
