--- a/Store2/Views/Home/Index.cshtml
+++ b/Store2/Views/Home/Index.cshtml
@@ -5,22 +5,8 @@
 
 <div class="container mt-4">
     <div class="row align-items-start">
-        <!-- Секция свойств -->
-        <div class="col-md-4">
-            @foreach (var property in Model.PropertyStoreModels.Take(10))
-            {
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">@property.Name</h5>
-                        <p class="card-text">@property.value</p>
-                        <img src="@property.imageUrl" alt="Property Image" class="img-fluid">
-                    </div>
-                </div>
-            }
-        </div>
-
         <!-- Секция слайдов -->
-        <div class="col-md-8">
+        <div class="col-md-12">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -34,7 +20,11 @@
                     @foreach (var slide in Model.Slides.Select((value, index) => new { value, index }))
                     {
                         <div class="carousel-item @(slide.index == 0 ? "active" : "")">
-                            <img class="d-block w-100" src="@slide.value.Image" alt="@slide.value.Name">
+                            <img class="d-block w-100" src="@slide.value.Image" alt="@slide.value.Name" style="max-height: 500px; object-fit: cover;">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>@slide.value.Name</h5>
+                                <p>@slide.value.PageNumber</p>
+                            </div>
                         </div>
                     }
                 </div>
@@ -51,26 +41,50 @@
         </div>
     </div>
 
-    <h2 class="mb-3">Продукты</h2>
+    <div class="col-md-12">
+        <h2 class="text-center my-4">Категории продуктов</h2>
+        <hr class="my-4" style="border-top: 1px solid #ccc;">
+        <div class="row">
+            @foreach (var category in Model.Categories)
+            {
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 shadow-sm">
+                        <a href="@Url.Action("Index", "Catalog", new { categoryId = category.Id })">
+                            <img src="@category.Description" class="card-img-top" alt="@category.Name" style="max-height: 250px; object-fit: cover;">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">@category.Name</h5>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+
+    <h2 class="text-center my-4">Недавно добавленные</h2>
+    <hr class="my-4" style="border-top: 1px solid #ccc;">
     <div class="row">
-        @foreach (var product in Model.Products)
+        @foreach (var product in Model.Products.Take(4))
         {
             <div class="col-sm-6 col-md-4 col-lg-3 mb-3">
-                <div class="card h-100">
+                <div class="card h-100 shadow-sm">
                     <!-- Оберните изображение в ссылку, которая ведет на страницу описания продукта -->
                     <a href="@Url.Action("Details", "Catalog", new { id = product.Id })">
-                        <img src="@product.ImageUrl" class="card-img-top" alt="@product.Name">
+                        <img src="@product.ImageUrl" class="card-img-top" alt="@product.Name" style="max-height: 200px; object-fit: cover;">
                     </a>
-                    <div class="card-body">
+                    <div class="card-body d-flex flex-column">
                         <h5 class="card-title">@product.Name</h5>
                         <p class="card-text">@product.Price.ToString("C")</p>
                         <!-- Кнопка для добавления продукта в корзину -->
-                        <button class="btn btn-success">Добавить в корзину</button>
+                        <button class="btn btn-success mt-auto">Добавить в корзину</button>
                     </div>
                 </div>
             </div>
         }
     </div>
+
+    <h2 class="text-center my-4">Акции</h2>
+    <hr class="my-4" style="border-top: 1px solid #ccc;">
 </div>
 
 @section Scripts {
