--- a/Store2/Views/Shared/_Layout.cshtml
+++ b/Store2/Views/Shared/_Layout.cshtml
@@ -3,11 +3,39 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Супермаркет - Ваш онлайн магазин</title>
+    <title>@ViewBag.Title - Супермаркет</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="~/Content/style.css">
     <link rel="stylesheet" href="~/Content/pe-icon-7-stroke.css">
     <link rel="stylesheet" href="~/Content/materialdesignicons.min.css">
+    <style>
+        .ui-autocomplete {
+            max-height: 200px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            z-index: 1000 !important;
+        }
+
+        .ui-menu-item {
+            list-style-type: none;
+        }
+
+        .ui-menu .ui-menu-item a {
+            display: block;
+            padding: 10px;
+            color: #000;
+            text-decoration: none;
+            border-bottom: 1px solid #ddd;
+        }
+
+            .ui-menu .ui-menu-item a:hover {
+                background: #f0f0f0;
+                color: #000;
+            }
+    </style>
 </head>
 <body>
     <div class="wrapper">
@@ -58,13 +86,23 @@
                         <img src="images/logo-dark.png" alt="" class="logo-dark" height="20" />
                     </a>
 
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index", "Home")">Домой</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index", "Catalog")">Магазин</a>
+                        </li>
+                    </ul>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="mdi mdi-menu"></i>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <form class="mx-auto my-2 my-lg-0 d-inline w-30">
+                        <form class="mx-auto my-2 my-lg-0 d-inline w-30" action="@Url.Action("Search", "Catalog")" method="get">
                             <div class="input-group rounded-pill">
-                                <input type="text" class="form-control rounded-pill border border-right-0" placeholder="Поиск...">
+                                <input type="text" id="search-box" class="form-control rounded-pill border border-right-0" name="query" placeholder="Поиск...">
                                 <span class="input-group-append">
                                     <button class="btn btn-outline-secondary rounded-pill border border-left-0" type="button">
                                         <i class="mdi mdi-magnify"></i>
@@ -73,19 +111,53 @@
                             </div>
                         </form>
                         <ul class="navbar-nav ml-auto navbar-center" id="mySidenav">
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index", "Manage")" class="nav-link">@User.Identity.Name</a>
+                                </li>
+                            }
+
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Login", "Account")" class="nav-link">Войти</a>
+                                </li>
+                            }
+
+                            @if (Request.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" href="@Url.Action("Index", "Favorites")">Список Избранного</a>
+                                </li>
+                            }
                             <li class="nav-item">
-                                <a href="#testimonial" class="nav-link">Мой аккаунт</a>
+                                <a href="@Url.Action("Index", "ShoppingCarts")" class="nav-link">Корзина</a>
                             </li>
-                            <li class="nav-item">
-                                <a href="#faq" class="nav-link">Список избранного</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#faq" class="nav-link">Коризна</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#faq" class="nav-link">Админ панель</a>
-                            </li>
+
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                if (User.IsInRole("Admin"))
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="@Url.Action("Index", "AdminPanel", new { area = "Admin" })">Админ-панель</a>
+                                    </li>
+                                }
+                            }
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+                                {
+                                    @Html.AntiForgeryToken()
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item">
+                                            <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Выйти</a>
+                                        </li>
+                                    </ul>
+                                }
+                            }
                         </ul>
+
                     </div>
                 </div>
             </nav>
@@ -116,8 +188,6 @@
             <!-- end container-fluid -->
         </section>
 
-
-
         <main role="main" class="container content">
             <!-- Основное содержимое страницы -->
             @RenderBody()
@@ -137,7 +207,6 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="text-md-right">
-                                        <a href="#" class="btn btn-purple">Get started now <i class="mdi mdi-arrow-right"></i> </a>
                                     </div>
                                 </div>
                             </div>
@@ -212,12 +281,71 @@
     </div>
 
     <!-- Скрипты -->
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-    <script src="~/Scripts/"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="~/Scripts/jquery.easing.min.js"></script>
     <script src="~/Scripts/scrollspy.min.js"></script>
     <script src="~/Scripts/counter.init.js"></script>
     <script src="~/Scripts/app.js"></script>
+    <script>
+        $(function () {
+            $("#search-box").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: '@Url.Action("Autocomplete", "Catalog")',
+                        type: 'GET',
+                        data: { term: request.term },
+                        success: function (data) {
+                            response($.map(data, function (item) {
+                                return {
+                                    label: item.label,
+                                    value: item.value
+                                };
+                            }));
+                        }
+                    });
+                },
+                select: function (event, ui) {
+                    window.location.href = '@Url.Action("Details", "Catalog")/' + ui.item.value;
+                },
+                minLength: 2
+            }).autocomplete("instance")._renderItem = function (ul, item) {
+                return $("<li class='ui-menu-item'>")
+                    .append("<div class='ui-menu-item-wrapper'>" + item.label + "</div>")
+                    .appendTo(ul);
+            };
+        });
+
+        $(document).ready(function () {
+            let idleTime = 0;
+
+            // Инкрементировать idleTime каждые 60 секунд
+            const idleInterval = setInterval(timerIncrement, 60000); // 1 минута
+
+            // Сбросить idleTime при любой активности пользователя
+            $(this).mousemove(resetTimer);
+            $(this).keypress(resetTimer);
+
+            function resetTimer() {
+                idleTime = 0;
+            }
+
+            function timerIncrement() {
+                idleTime += 1;
+                if (idleTime >= 30) { // 30 минут бездействия
+                    // Перенаправить на страницу выхода или выполнить другие действия
+                    window.location.href = '@Url.Action("Logout", "Account", new { area = "" })';
+                } else {
+                    // Отправить "keep-alive" запрос на сервер для продления сессии
+                    $.ajax({
+                        url: '@Url.Action("KeepAlive", "Account", new { area = "" })',
+                        method: 'GET'
+                    });
+                }
+            }
+        });
+    </script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
